--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -8,24 +8,25 @@ h2 {font-size: 22px;}
 
 h3 {font-size: 18px;}
 
-.header { background-color:ghostwhite; padding-top:15px; text-align:center; border-bottom:2px solid black;
+.header {  padding-top:15px; text-align:center; border-bottom:2px solid black;
 }
 
 .container {
     width: 801px;
     margin: 0 auto;
     border: 2px solid black;
+    background-color:ghostwhite;
 }
 
-.main-right { background-color:ghostwhite; color:black;  padding-top:20px;
-           padding-right:8px; padding-bottom:5px; float:right; width:426px; text-align:left;
+/*.main-right { background-color:ghostwhite; color:black;  
+           padding-right:8px;  float:right; width:426px; height:600px; text-align:left;
           }
 
 .main-left { font-size:18px; text-align:center; background-color:ghostwhite; color:black;
-          float:left; padding:25px; width:317px;  padding-top:169px; padding-bottom:150px;
-          }
+          float:left; width:317px;   height:600px;
+          }*/
 
-.main { background-color:ghostwhite; padding-top:15px; 
+.main { background-color:ghostwhite; padding-top:15px; margin:0 auto; padding-left:25px;
 }
 
 .footer { clear:both; background-color:lightgreen; margin-top:45px; 
